Updating details of my index page

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Senior Cloud Enginner for a MSP called iVison based out of Atlanta</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am origonally from Los Angles, California but have been in Atlanta for about 20 years</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Fishing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Owning my own company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>East Point,GA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Not really trying to be a web developer jsut looking to expand my tools set.  I want to create a few things that this will help with.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/doingway2much">Github</a></li>
         </ul>
     </footer>
 </body>
