--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>East Point,GA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Not really trying to be a web developer jsut looking to expand my tools set.  I want to create a few things that this will help with.</p>
+      <p>Not really trying to be a web developer jsut looking to expand my tool set.  I want to create a few things that this will help with.</p>
     </section>
 
     <footer id="footer">
